修改文內連結

--- a/Week1_7.11/HW_1.Rmd
+++ b/Week1_7.11/HW_1.Rmd
@@ -1,55 +1,70 @@
-##資料科學程式設計 HW:1  
-#####趙文  
-###目錄  
+<h2 id = 1></h2>
+## 資料科學程式設計 HW:1  
+#### 趙文  
+### 目錄  
 1. [設定工作位置、載入檔案](#9)  
-2. [整理資料](#23)  
-3. [完整資料](#39)  
+2. [整理資料](#27)  
+3. [完整資料](#49)  
 
+<h2 id = 9></h2>
 >1.設定工作位置、載入檔案  
 
 >>(1)已經在numbers上稍微整理過表頭（刪除多餘空格）
+
 ```{r}
 setwd("/Users/zhaowen/Desktop/Data-Science")
 Birth <- read.csv("Birth_rate103-107.csv")
 Marry <- read.csv("Marriage_rate103-107.csv")
 ```
+
 >>(2)整理完的csv(head版)
+
 ```{r}
 head(Birth)
 head(Marry)
 ```
 ---
+
+<h2 id = 27></h2>
 >2.整理資料
 
 >>(1)合併兩個表格
+
 ```{r}
 library(dplyr)
 All <- cbind(Birth, Marry)
 ```
+
 >>(2)刪除多於的列
+
 ```{r}
 All <- All[,-c(13,14)]
 ```
+
 >>(3)合併完的資料(head版)
+
 ```{r}
 head(All)
 ```
 ---
+<h2 id = 49></h2>
 >3.完整資料
 
->>(1)[103-107生育率](#46)  
->>(2)[103-107結婚率](#50)  
->>(3)[合併完的表格](#54)  
+>>(1)[103-107生育率](#56)  
+>>(2)[103-107結婚率](#60)  
+>>(3)[合併完的表格](#64)  
 
+<h2 id = 56></h2>
 ```{r}
 Birth
 ```
-
+<h2 id= 60></h2>[回完整資料](#49)
 ```{r}
 Marry
 ```
-
+<h2 id = 64></h2>[回完整資料](#49)
 ```{r}
 All
 ```
 
+[Back To Top](#1)
